--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="profile">
           <img class="profilepict" src="images/original.jpg" alt="profile-img">
           <h2>Hello.</h2>
-          <p>I am a ECE student at <strong><a class="nmit" href="https://www.nmit.ac.in/">NMIT</a></strong>.I am a joyful and creative person and I love to expertiment new things. </p>
+          <h4>I am a ECE student at <strong><a class="nmit" href="https://www.nmit.ac.in/">NMIT</a></strong>.I am a joyful and creative person and I love to expertiment new things. </h4>
         </div>
         <hr>
         <div class="skills">
@@ -49,8 +49,8 @@
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3>I can create cool websites for you if you want me to.</h3>
-          <p style="padding-bottom: 50px;font-size: 1.2rem">If you think you need my help with something or just fancy saying hey, then get in touch. I render free advices about life too!</p>
+          <h4>I can create cool websites for you if you want me to.</h3>
+          <p style="padding-bottom: 50px;font-size: 1.2rem">If you think you need my help with something or just fancy saying hey, then get in touch. I render free advices about life too!</h4>
           <a class="btn" href="mailto:jessicavazd@email.com">CONTACT ME</a>
         </div>
       </div>
@@ -60,7 +60,7 @@
         <a class="footer-link" href="https://github.com/jessicavaz16">GitHub</a>
         <a class="footer-link" href="https://twitter.com/">Twitter</a>
         <a class="footer-link" href="https://jessicavaz16.github.io/CV/">Website</a>
-        <p style="color: #EAF6F6;margin-bottom: 0;padding-bottom: 50px;padding-top: 10px; ">© 2020 Jessica Vaz. All rights reserved.</p>
+        <h6 style="color: #EAF6F6;margin-bottom: 0;padding-bottom: 50px;padding-top: 10px; ">© 2020 Jessica Vaz. All rights reserved.</h6>
       </div>
       
 </body>
