--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h4>I can create cool websites for you if you want me to.</h3>
-          <p style="padding-bottom: 50px;font-size: 1.2rem">If you think you need my help with something or just fancy saying hey, then get in touch. I render free advices about life too!</h4>
+          <h3>I can create cool websites for you if you want me to.</h3>
+          <h4 style="padding-bottom: 50px;font-size: 1.2rem">If you think you need my help with something or just fancy saying hey, then get in touch. I render free advices about life too!</h4>
           <a class="btn" href="mailto:jessicavazd@email.com">CONTACT ME</a>
         </div>
       </div>
