--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="profile">
           <img class="profilepict" src="images/original.jpg" alt="profile-img">
           <h2>Hello.</h2>
-          <h4>I am a ECE student at <strong><a class="nmit" href="https://www.nmit.ac.in/">NMIT</a></strong>.I am a joyful and creative person and I love to expertiment new things. </h4>
+          <h5>I am a ECE student at <strong><a class="nmit" href="https://www.nmit.ac.in/">NMIT</a></strong>.I am a joyful and creative person and I love to expertiment new things. </h5>
         </div>
         <hr>
         <div class="skills">
@@ -50,7 +50,7 @@
         <div class="contact-me">
           <h2>Get In Touch</h2>
           <h3>I can create cool websites for you if you want me to.</h3>
-          <h4 style="padding-bottom: 50px;font-size: 1.2rem">If you think you need my help with something or just fancy saying hey, then get in touch. I render free advices about life too!</h4>
+          <p style="padding-bottom: 50px;font-size: 1rem">If you think you need my help with something or just fancy saying hey, then get in touch. I render free advices about life too!</p>
           <a class="btn" href="mailto:jessicavazd@email.com">CONTACT ME</a>
         </div>
       </div>
