--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="profile">
           <img class="profilepict" src="images/original.jpg" alt="profile-img">
           <h2>Hello.</h2>
-          <h5>I am a ECE student at <strong><a class="nmit" href="https://www.nmit.ac.in/">NMIT</a></strong>.I am a joyful and creative person and I love to expertiment new things. </h5>
+          <h5 style="font-weight: normal;">I am a ECE student at <strong><a class="nmit" href="https://www.nmit.ac.in/">NMIT</a></strong>.I am a joyful and creative person and I love to expertiment new things. </h5>
         </div>
         <hr>
         <div class="skills">
