--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="contact-me">
           <h2>Get In Touch</h2>
           <h3>I can create cool websites for you if you want me to.</h3>
-          <p style="padding-bottom: 50px;font-size: 1rem">If you think you need my help with something or just fancy saying hey, then get in touch. I render free advices about life too!</p>
+          <h5 style="padding-bottom: 50px;font-weight: normal;line-height:2;">If you think you need my help with something or just fancy saying hey, then get in touch. I render free advices about life too!</h5>
           <a class="btn" href="mailto:jessicavazd@email.com">CONTACT ME</a>
         </div>
       </div>
