--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <h2>Get In Touch</h2>
           <h3>I can create cool websites for you if you want me to.</h3>
           <p style="padding-bottom: 50px;">If you think you need my help with something or just fancy saying hey, then get in touch. I render free advices about life too!</p>
-          <a class="btn" href="mailto:jessicavazd@email.com">CONTACT ME</a>
+          <a class="btn" href="mailto:jessicavazd@gmail.com">CONTACT ME</a>
         </div>
       </div>
       
